--- a/AnsibleWorkflow/LogicalTwoArm/bigip_configuration.yaml
+++ b/AnsibleWorkflow/LogicalTwoArm/bigip_configuration.yaml
@@ -33,7 +33,7 @@
       server: "{{bigip1_ip}}"
       user: "{{ bigip1_username }}"
       password: "{{ bigip1_password }}"
-      name: "{{tenant_name_aci}}_{{item.name}}"
+      name: "{{tenant_name}}_{{item.name}}"
       tag: "{{item.id}}"
       tagged_interfaces:
       - "{{item.interface}}"
@@ -46,7 +46,7 @@
       server: "{{bigip2_ip}}"
       user: "{{ bigip2_username }}"
       password: "{{ bigip2_password }}"
-      name: "{{tenant_name_aci}}_{{item.name}}"
+      name: "{{tenant_name}}_{{item.name}}"
       tag: "{{item.id}}"
       tagged_interfaces:
       - "{{item.interface}}"
@@ -61,7 +61,7 @@
       server: "{{bigip1_ip}}"
       user: "{{ bigip1_username }}"
       password: "{{ bigip1_password }}"
-      name: "{{tenant_name_aci}}_{{item.name}}"
+      name: "{{tenant_name}}_{{item.name}}"
       tag: "{{item.id}}"
       untagged_interfaces:
       - "{{item.interface}}"
@@ -74,7 +74,7 @@
       server: "{{bigip2_ip}}"
       user: "{{ bigip2_username }}"
       password: "{{ bigip2_password }}"
-      name: "{{tenant_name_aci}}_{{item.name}}"
+      name: "{{tenant_name}}_{{item.name}}"
       tag: "{{item.id}}"
       untagged_interfaces:
       - "{{item.interface}}"
@@ -89,7 +89,7 @@
      server: "{{bigip1_ip}}"
      user: "{{ bigip1_username }}"
      password: "{{ bigip1_password }}"
-     name: "{{tenant_name_aci}}_{{item.name}}"
+     name: "{{tenant_name}}_{{item.name}}"
      address: "{{item.address}}"
      netmask: "{{item.netmask}}"
      vlan: "{{tenant_name_aci}}_{{item.vlan}}"
@@ -101,7 +101,7 @@
      server: "{{bigip2_ip}}"
      user: "{{ bigip2_username }}"
      password: "{{ bigip2_password }}"
-     name: "{{tenant_name_aci}}_{{item.name}}"
+     name: "{{tenant_name}}_{{item.name}}"
      address: "{{item.address}}"
      netmask: "{{item.netmask}}"
      vlan: "{{tenant_name_aci}}_{{item.vlan}}"
@@ -114,10 +114,10 @@
      server: "{{bigip1_ip}}"
      user: "{{ bigip1_username }}"
      password: "{{ bigip1_password }}"
-     name: "{{tenant_name_aci}}_{{item.name}}"
+     name: "{{tenant_name}}_{{item.name}}"
      address: "{{item.address}}"
      netmask: "{{item.netmask}}"
-     vlan: "{{tenant_name_aci}}_{{item.vlan}}"
+     vlan: "{{tenant_name}}_{{item.vlan}}"
      traffic_group: "traffic-group-1"
      validate_certs: "no"
     with_items: "{{ floating_selfip_information }}"
