--- a/AnsibleWorkflow/LogicalTwoArm/variable.yaml
+++ b/AnsibleWorkflow/LogicalTwoArm/variable.yaml
@@ -17,7 +17,7 @@ module_provisioning:
 
 #APIC information
 apic_ip: 10.192.73.30
-tenant_name: "Test_aci_posts"
+tenant_name: "Testing_New_Posts"
 consumerBD_name: "externalBD"
 providerBD_name: "internalBD"
 
