--- a/AnsibleWorkflow/LogicalTwoArm/variable.yaml
+++ b/AnsibleWorkflow/LogicalTwoArm/variable.yaml
@@ -28,7 +28,7 @@ providerEPG_name: "internalEPG"
 SGtemplate_name: "SGT_BIGIP"
 contract_name: "2ARM-Contract"
 
-device_type: 'physical'
+device_type: 'virtual'
 mode: 'SA'
 logicalDeviceCluster_name: "BIGIP_HA_PHY"
 consumer_vlan: "1198"
