--- a/AnsibleWorkflow/LogicalTwoArm/variable.yaml
+++ b/AnsibleWorkflow/LogicalTwoArm/variable.yaml
@@ -47,11 +47,13 @@ device2_interface1_connectionPath: "pod-1/paths-103/pathep-[eth1/34]"
 physical_domain_name: "ServiceUnmanagedPhy"
 
 # Network information
-bigip1_ip: 10.192.73.91
+#bigip1_ip: 10.192.73.91
+bigip1_ip: 10.192.73.180
 bigip1_username: "admin"
 bigip1_password: "admin"
 
-bigip2_ip: 10.192.73.92
+#bigip2_ip: 10.192.73.92
+bigip2_ip: 10.192.73.181
 bigip2_username: "admin"
 bigip2_password: "admin"
 
