--- a/AnsibleWorkflow/LogicalTwoArm/variable.yaml
+++ b/AnsibleWorkflow/LogicalTwoArm/variable.yaml
@@ -1,5 +1,33 @@
-## Onboarding BIG-IP ##
+###Parameters that can be entered throught tower survey or used in the variable file###
+
+#BIG-IP being configured is virtual or physical
+device_type: 'virtual'
+#BIG-IP is in HA or SA mode
+mode: 'HA'
+
+#Login credentials
+bigip1_ip: 10.192.73.91
+bigip1_username: "admin"
+bigip1_password: "admin"
+
+bigip2_ip: 10.192.73.92
+bigip2_username: "{{bigip1_username}}"
+bigip2_password: "{{bigip1_password}}"
+
+apic_ip: 10.192.73.30
+apic_username: "admin"
+apic_password: "cisco123"
+
+#Do you want to onborad the BIG-IP(s)
 onboarding: "yes" #Options: yes/no
+
+#Deploy L7 service on the BIG-IP
+service: "yes" #Options: yes/no
+
+### These have to be entered in the variable file ###
+#######################################################
+#If onboarding is 'yes' enter the following information
+#######################################################
 banner_text: "---BIG-IP APIC UnManaged Mode ---"
 
 ntp_servers:
@@ -15,8 +43,11 @@ module_provisioning:
  - name: 'ltm'
    level: 'nominal'
 
+bigip1_hostname: bigipha1.local
+
+#################
 #APIC information
-apic_ip: 10.192.73.30
+#################
 tenant_name: "AnsibleDemo"
 consumerBD_name: "externalBD"
 providerBD_name: "internalBD"
@@ -28,46 +59,45 @@ providerEPG_name: "internalEPG"
 SGtemplate_name: "SGT_BIGIP_VE"
 contract_name: "2ARM-Contract_VE"
 
-device_type: 'virtual'
-mode: 'HA'
 logicalDeviceCluster_name: "BIGIP_HA_VE"
 consumer_vlan: "1198"
 provider_vlan: "1199"
 
-#Virtual
+##################
+#If Virtual BIG-IP
+##################
 vmm_domain_name: 'vcenter'
 device1_vm_name: 'Payal_BIG-IP VE1-10.192.73.180'
 device2_vm_name: 'Payal_BIG-IP VE2-10.192.73.181'
 ldev_ext_interface_map_network_adaptor: 'Network adapter 2'
 ldev_int_interface_map_network_adaptor: 'Network adapter 3'
 
-#Physical
+###################
+#If Physical BIG-IP
+###################
 device1_interface1_connectionPath: "pod-1/paths-102/pathep-[eth1/34]"
 device2_interface1_connectionPath: "pod-1/paths-103/pathep-[eth1/34]"
 physical_domain_name: "ServiceUnmanagedPhy"
 
-# Network information
-#bigip1_ip: 10.192.73.91
-bigip1_ip: 10.192.73.180
-bigip1_username: "admin"
-bigip1_password: "admin"
+####################
+# BIG-IP information
+####################
 
-#bigip2_ip: 10.192.73.92
-bigip2_ip: 10.192.73.181
-bigip2_username: "admin"
-bigip2_password: "admin"
+##################################################
+#If mode is HA
+#1) Enter HA related information
+#2) Enter self-ip for both BIG-IPs and floating IP
+##################################################
 
-#Information needed if BIG-IP is setup in HA pair
-bigip1_hostname: bigipha1.local
 bigip2_hostname: bigipha2.local
 
 ha_vlan_information:
 - name: "HA_VLAN"
   id: "3"
-  #interface: "2.4"
-  interface: "1.3"
+  interface: "2.4"
+  #interface: "1.3"
 
-bigip1_ha_selfip: 
+bigip1_ha_selfip:
 - name: "HA_SELF-IP"
   address: "1.1.1.4"
   netmask: "255.255.255.0"
@@ -82,12 +112,12 @@ bigip2_ha_selfip:
 vlan_information:
 - name: "External_VLAN"
   id: "{{consumer_vlan}}"
-  #interface: "2.2"
-  interface: "1.1"
+  interface: "2.2"
+  #interface: "1.1"
 - name: "Internal_VLAN"
   id: "{{provider_vlan}}"
-  #interface: "2.2"
-  interface: "1.2"
+  interface: "2.2"
+  #interface: "1.2"
 
 bigip1_selfip_information:
 - name: 'External-SelfIP'
@@ -126,16 +156,30 @@ static_route:
   netmask: "0.0.0.0"
 
 #Deploy http service on the BIG-IP
-service: "yes" #Options: yes/no
+#service: "yes" #Options: yes/no
 
-vip_name: "http_vs"
-vip_port: "80"
-vip_ip: "10.168.56.105"
-snat: "Automap" #Options: none/automap/snat-pool name
+vips:
+- vip_name: "http_vs"
+  vip_port: "443"
+  vip_ip: "10.168.56.105"
+  snat: "Automap"  #Options: none/automap/snat-pool namea
+  pool_name: "https-pool"
+- vip_name: "http"
+  vip_port: "80"
+  vip_ip: "10.168.56.106"
+  snat: "Automap"
+  pool_name: "http-pool"
 
-pool_name: "web-pool"
-pool_members:
-- port: "80"
-  host: "192.168.56.140"
-- port: "80"
-  host: "192.168.56.141"
+pools:
+- pool_name: "https-pool"
+  pool_members:
+   - port: "443"
+     host: "192.168.56.140"
+   - port: "443"
+     host: "192.168.56.141"
+- pool_name: "http-pool"
+  pool_members:
+   - port: "80"
+     host: "192.168.56.140"
+   - port: "80"
+     host: "192.168.56.141"
