--- a/AnsibleWorkflow/common/http_service.yaml
+++ b/AnsibleWorkflow/common/http_service.yaml
@@ -1,12 +1,14 @@
-  - name: Create nodes
+- name: Create nodes
     bigip_node:
       server: "{{ bigip_ip }}"
       user: "{{ bigip_username }}"
       password: "{{ bigip_password }}"
-      host: "{{item.host}}"
-      name: "{{item.host}}"
+      host: "{{item.1.host}}"
+      name: "{{item.1.host}}"
       validate_certs: "no"
-    with_items: "{{pool_members}}"
+    with_subelements:
+     - "{{ pools }}"
+     - pool_members
     delegate_to: localhost
 
   - name: Create pool
@@ -14,11 +16,12 @@
       server: "{{ bigip_ip }}"
       user: "{{ bigip_username }}"
       password: "{{ bigip_password }}"
-      name: "{{tenant_name}}_{{pool_name}}"
+      name: "{{tenant_name}}_{{item.pool_name}}"
       lb_method: "round-robin"
       monitors: "/Common/http"
       monitor_type: "and_list"
       validate_certs: "no"
+    with_items: "{{pools}}"
     delegate_to: localhost
 
   - name: Add Pool members
@@ -27,28 +30,31 @@
       user: "{{ bigip_username }}"
       password: "{{ bigip_password }}"
       state: "present"
-      name: "{{item.host}}"
-      host: "{{item.host}}"
-      port: "{{item.port}}"
-      pool: "{{tenant_name}}_{{pool_name}}"
+      name: "{{item.1.host}}"
+      host: "{{item.1.host}}"
+      port: "{{item.1.port}}"
+      pool: "{{tenant_name}}_{{item.0.pool_name}}"
       validate_certs: "no"
-    with_items: "{{pool_members}}"
+    with_subelements:
+     - "{{ pools }}"
+     - pool_members
     delegate_to: localhost
 
-  - name: Add Virtual Server
+  - name: Add Virtual Server(s)
     bigip_virtual_server:
       server: "{{ bigip_ip }}"
       user: "{{ bigip_username }}"
       password: "{{ bigip_password }}"
-      name: "{{tenant_name}}_{{logicalDeviceCluster_name}}_{{vip_name}}"
-      destination: "{{vip_ip}}"
-      port: "{{vip_port}}"
-      enabled_vlans: 
+      name: "{{tenant_name}}_{{logicalDeviceCluster_name}}_{{item.vip_name}}"
+      destination: "{{item.vip_ip}}"
+      port: "{{item.vip_port}}"
+      enabled_vlans:
        - "{{tenant_name}}_{{vlan_information[0]['name']}}"
        - "{{tenant_name}}_{{vlan_information[1]['name']}}"
       all_profiles:
        - http
-      pool: "{{tenant_name}}_{{pool_name}}"
-      snat: "{{snat}}"
+      pool: "{{tenant_name}}_{{item.pool_name}}"
+      snat: "{{item.snat}}"
       validate_certs: "no"
+    with_items: "{{vips}}"
     delegate_to: localhost
