--- a/AnsibleWorkflow/LogicalTwoArm/bigip_configuration_delete.yaml
+++ b/AnsibleWorkflow/LogicalTwoArm/bigip_configuration_delete.yaml
@@ -39,7 +39,7 @@
      server: "{{bigip1_ip}}"
      user: "{{ bigip1_username }}"
      password: "{{ bigip1_password }}"
-     name: "{{tenant_name_aci}}_{{item.name}}"
+     name: "{{tenant_name}}_{{item.name}}"
      state: absent
      validate_certs: "no"
     with_items: "{{ bigip1_selfip_information }}"
@@ -49,7 +49,7 @@
      server: "{{bigip2_ip}}"
      user: "{{ bigip2_username }}"
      password: "{{ bigip2_password }}"
-     name: "{{tenant_name_aci}}_{{item.name}}"
+     name: "{{tenant_name}}_{{item.name}}"
      state: absent
      validate_certs: "no"
     with_items: "{{ bigip2_selfip_information }}"       
@@ -60,7 +60,7 @@
       server: "{{bigip1_ip}}"
       user: "{{ bigip1_username }}"
       password: "{{ bigip1_password }}"
-      name: "{{tenant_name_aci}}_{{item.name}}"
+      name: "{{tenant_name}}_{{item.name}}"
       state: absent
       validate_certs: "no"
     with_items: "{{vlan_information}}"
@@ -70,7 +70,7 @@
       server: "{{bigip2_ip}}"
       user: "{{ bigip2_username }}"
       password: "{{ bigip2_password }}"
-      name: "{{tenant_name_aci}}_{{item.name}}"
+      name: "{{tenant_name}}_{{item.name}}"
       state: absent
       validate_certs: "no"
     with_items: "{{vlan_information}}"
