--- a/AnsibleWorkflow/common/http_service.yaml
+++ b/AnsibleWorkflow/common/http_service.yaml
@@ -51,11 +51,11 @@
       enabled_vlans:
        - "{{tenant_name}}_{{vlan_information[0]['name']}}"
        - "{{tenant_name}}_{{vlan_information[1]['name']}}"
-      all_profiles:
-       - http
+      all_profiles: "{{item.1}}"
       pool: "{{tenant_name}}_{{item.pool_name}}"
       snat: "{{item.snat}}"
-      all_profiles: "{{ profiles | default(omit) }}"
       validate_certs: "no"
-    with_items: "{{vips}}"
+    with_subelements: 
+     - "{{vips}}"
+     - profiles
     delegate_to: localhost
