--- a/VirtualBIG-IP- AnsibleTowerWorkflow/apic_deploy.yaml
+++ b/VirtualBIG-IP- AnsibleTowerWorkflow/apic_deploy.yaml
@@ -5,7 +5,7 @@
 
   vars:
     machine:
-      username: '{{ ansible_user }}'
+      username: '{{ ansible_userame }}'
       password: '{{ ansible_password }}'
       
   tasks:
