--- a/VirtualBIG-IP- AnsibleTowerWorkflow/apic_deploy.yaml
+++ b/VirtualBIG-IP- AnsibleTowerWorkflow/apic_deploy.yaml
@@ -5,8 +5,8 @@
 
   vars:
     machine:
-      username: '{{ ansible_userame }}'
-      password: '{{ ansible_password }}'
+      username: '{{ lookup("env", "ANSIBLE_NET_USERNAME") }}'
+      password: '{{ lookup("env", "ANSIBLE_NET_PASSWORD") }}'
       
   tasks:
 
