--- a/VirtualBIG-IP- AnsibleTowerWorkflow/get_vlan_from_ve_ldev.yaml
+++ b/VirtualBIG-IP- AnsibleTowerWorkflow/get_vlan_from_ve_ldev.yaml
@@ -1,23 +1,20 @@
-- name: ACI 
-  hosts: localhost
+- name: Configure BIG-IP 
+  hosts: aci
   connection: local
   gather_facts: false
 
   vars:
    vlan_encap: []
 
-  vars_files:
-    - aci_unmanaged_vars_combined_ldev.yml
-
   tasks:
 
-  - name: Get VLAN information from a deployed graph 
+  - name: Get VLAN information from deployed graph 
     aci_rest:
       action: "get"
       uri: "/api/node/mo/uni/tn-{{tenant_name}}/GraphInst_C-[uni/tn-{{tenant_name}}/brc-{{contract_name}}]-G-[uni/tn-{{tenant_name}}/AbsGraph-{{SGtemplate_name}}]-S-[uni/tn-common/ctx-default]/NodeInst-N1.json?query-target=subtree&target-subtree-class=vnsEPgDef"
-      host: 10.192.73.50
-      username: admin
-      password: cisco123
+      host: "{{inventory_hostname}}"
+      username: '{{ lookup("env", "ANSIBLE_NET_USERNAME") }}'
+      password: '{{ lookup("env", "ANSIBLE_NET_PASSWORD") }}'
       validate_certs: "false"
     register: vlans
 
@@ -31,3 +28,33 @@
      query_string: "imdata[*].vnsEPgDef.attributes"
 
   - debug: "msg={{vlan_encap}}"
+
+  - name: Setting up provider values
+    set_fact:
+     provider:
+      server: "{{bigip}}"
+      username: "{{bigip_username}}"
+      password: "{{bigip_password}}"
+      server_port: "443"
+      validate_certs: "False"
+
+  - name: Add Provider VLAN
+    bigip_vlan:
+      provider: "{{provider}}"
+      name: "{{item.name}}"
+      tag: "{{item.encap}}"
+      untagged_interfaces:
+      - "{{provider_interface}}"
+    loop: "{{vlan_encap}}"
+    when: 'item.name == "provider"'
+    
+  - name: Add Consumer VLAN
+    bigip_vlan:
+      provider: "{{provider}}"
+      name: "{{item.name}}"
+      tag: "{{item.encap}}"
+      untagged_interfaces:
+      - "{{provider_interface}}"
+    loop: "{{vlan_encap}}"
+    when: 'item.name == "consumer"'
+  
