--- a/F5ServiceCenter/AnsiblePlaybooks/BIG-IP-Virtual/creds.yml
+++ b/F5ServiceCenter/AnsiblePlaybooks/BIG-IP-Virtual/creds.yml
@@ -1,7 +1,7 @@
 apic_ip: "10.107.0.xx"
 big_ip: "10.107.0.15x"
-tenant_name: "Student1"
-ldev_name: "Student1-LogicalDevice"
-ext_selfip: "10.168.12.50"
-int_selfip: "192.168.12.50"
+tenant_name: "StudentX"
+ldev_name: "StudentX-LogicalDevice"
+ext_selfip: "10.168.1X.50"
+int_selfip: "192.168.1X.50"
 
