--- a/AppCenter-dcloud-workingdraft_pureansible/dynamicEP.yml
+++ b/AppCenter-dcloud-workingdraft_pureansible/dynamicEP.yml
@@ -7,7 +7,7 @@
     epg_members: []
     pool_members: []
     pool_members_ip: []
-    partition: "DynamicEP"
+    partition: "DynamicEP/WebApplication"
   
   tasks:
   - name: Setup provider
