--- a/AppCenter-dcloud-workingdraft_pureansible/dynamicEP.yml
+++ b/AppCenter-dcloud-workingdraft_pureansible/dynamicEP.yml
@@ -8,7 +8,7 @@
     pool_members: []
     pool_members_ip: []
     partition_app: "DynamicEP/WebApplication"
-    parition: "DynamicEP"
+    partition: "DynamicEP"
   
   tasks:
   - name: Setup provider
