--- a/AppCenter-dcloud-workingdraft_pureansible/dynamicEP.yml
+++ b/AppCenter-dcloud-workingdraft_pureansible/dynamicEP.yml
@@ -16,14 +16,14 @@
       user: "{{bigip_username}}"
       password: "{{bigip_password}}"
       server_port: "443"
-      validate_certs: "no"
+      validate_certs: "false"
 
   - name: Get end points learned from End Point group
     aci_rest:
       action: "get"
       uri: "/api/node/mo/uni/tn-{{tenant_name}}/ap-{{app_profile_name}}/epg-{{epg_name}}.json?query-target=subtree&target-subtree-class=fvIp"
       host: "{{inventory_hostname}}"
-      username: {{ lookup("env", "ANSIBLE_NET_USERNAME") }} 
+      username: {{ lookup("env", "ANSIBLE_NET_USERNAME") }}
       password: {{ lookup("env", "ANSIBLE_NET_PASSWORD") }}
       validate_certs: "false"
     register: eps
